# Orion

./: .buildinfo  .flake8  .gitignore  .travis.yml  AUTHORS.rst  BENCHMARK.md  CONTRIBUTING.rst  DATABASE.md  DATASETS.md  DOCKER.md  HISTORY.md  LICENSE  MANIFEST.in  MTV.md  Makefile  README.md  SCORING.md  authors.html  benchmark.html  contributing.html  database.html  docker.html  experiments.py  genindex.html  history.html  index.html  main.sh  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements.txt  requirements_dev.txt  run-benchmark.py  run.sh  run_template.sh  search.html  searchindex.js  setup.cfg  setup.py  (+3 more)
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: OrionATP.yml  ci.yml  docs.yml  latest-dependencies.yml  tests.yml
OrionATP/: README.md  acquirer.py  api.txt  hyperparameters.json  index.html  pipeline.json  publisher.py  requirements.txt  trainer.py
_modules/: index.html  orion.html
_modules/mongoengine/: fields.html
_modules/orion/: analysis.html  benchmark.html  cli.html  core.html  data.html  evaluation.html  explorer.html  functional.html  metrics.html  model.html  runner.html  utils.html
_sources/: benchmark.rst.txt
_sources/api/: orion.analysis.rst.txt  orion.benchmark.rst.txt  orion.cli.rst.txt  orion.core.rst.txt  orion.data.rst.txt  orion.db.base.rst.txt  orion.db.explorer.rst.txt  orion.db.rst.txt  orion.db.schema.rst.txt  orion.evaluation.common.rst.txt  orion.evaluation.contextual.rst.txt  orion.evaluation.point.rst.txt  orion.evaluation.rst.txt  orion.evaluation.utils.rst.txt  orion.explorer.rst.txt  orion.functional.rst.txt  orion.metrics.rst.txt  orion.model.rst.txt  orion.primitives.azure_anomaly_detector.rst.txt  orion.primitives.detectors.rst.txt  orion.primitives.estimators.rst.txt  orion.primitives.intervals.rst.txt  orion.primitives.rst.txt  orion.primitives.tadgan.rst.txt  orion.primitives.timeseries_anomalies.rst.txt  orion.rst.txt  orion.runner.rst.txt  orion.utils.rst.txt
_sources/api_reference/: index.rst.txt  orion.rst.txt
_sources/developer_guides/: contributing.rst.txt
_sources/getting_started/: docker.rst.txt  install.rst.txt
_sources/user_guides/: benchmarking.rst.txt  evaluation_doc.rst.txt  index.rst.txt
_static/: documentation_options.js
api/: orion.analysis.html  orion.benchmark.html  orion.cli.html  orion.core.html  orion.data.html  orion.db.base.html  orion.db.explorer.html  orion.db.html  orion.db.schema.html  orion.evaluation.common.html  orion.evaluation.contextual.html  orion.evaluation.html  orion.evaluation.point.html  orion.evaluation.utils.html  orion.explorer.html  orion.functional.html  orion.html  orion.metrics.html  orion.model.html  orion.primitives.azure_anomaly_detector.html  orion.primitives.detectors.html  orion.primitives.estimators.html  orion.primitives.html  orion.primitives.intervals.html  orion.primitives.tadgan.html  orion.primitives.timeseries_anomalies.html  orion.runner.html  orion.utils.html
api_reference/: db.html  evaluation.html  index.html  orion.html  prim.html
api_reference/api/: orion.Orion.detect.html  orion.Orion.evaluate.html  orion.Orion.fit.html  orion.Orion.html  orion.Orion.load.html  orion.Orion.save.html  orion.benchmark.benchmark.html  orion.db.OrionDBExplorer.add_annotation.html  orion.db.OrionDBExplorer.add_datarun.html  orion.db.OrionDBExplorer.add_dataset.html  orion.db.OrionDBExplorer.add_event.html  orion.db.OrionDBExplorer.add_experiment.html  orion.db.OrionDBExplorer.add_pipeline.html  orion.db.OrionDBExplorer.add_signal.html  orion.db.OrionDBExplorer.add_signalrun.html  orion.db.OrionDBExplorer.add_signals.html  orion.db.OrionDBExplorer.add_template.html  orion.db.OrionDBExplorer.get_annotation.html  orion.db.OrionDBExplorer.get_annotations.html  orion.db.OrionDBExplorer.get_datarun.html  orion.db.OrionDBExplorer.get_dataruns.html  orion.db.OrionDBExplorer.get_dataset.html  (+36 more)
benchmark/: benchmark_parameters.csv  leaderboard.csv  leaderboard.md  leaderboard.xlsx  utils.py
benchmarking/: benchmark_data.csv  benchmark_hyperparameters.csv
developer_guides/: benchmark.html  contributing.html  index.html  int_benchmark.html
docker/: orion-jupyter.Dockerfile  package.sh
docs/: Makefile  conf.py  database.rst  docker.rst  index.rst  installation.rst  make.bat  usage.rst
getting_started/: docker.html  index.html  install.html  quickstart.html
notebooks/: Analysis Example.ipynb  Azure Analysis Example.ipynb  CSV Analysis Example.ipynb  CSV Processing Example.ipynb  Convert NASA data to Orion format.ipynb  Dummy Pipeline - NASA Data.ipynb  Fill forward primitive.ipynb  LSTM Regression and dynamic error thresholding - NASA Data.ipynb  OrionDBExplorer Tutorial.ipynb  OrionExplorer - CSV Processing.ipynb  OrionExplorer - Usage Example.ipynb  OrionExplorer Usage Example.ipynb  Pipeline Scoring Example.ipynb  Prepare Anomaly Labels.ipynb  Process CSV Signals.ipynb  Simple Analysis Example.ipynb  Supervised LSTM Pipeline.ipynb  Testing Tuning.ipynb  Underneath the Pipeline - TadGAN 2.0.ipynb  Underneath the Pipeline.ipynb  Using Orion on multivariate input.ipynb  labels.csv  results.ipynb  run_benchmark.ipynb  run_benchmark_azure.ipynb  run_benchmark_htm.ipynb  run_benchmark_madgan.ipynb
orion/: __init__.py  __main__.py  analysis.py  benchmark.py  cli.py  core.py  data.py  db.py  estimators.py  evaluation.py  evaluation_variants.py  explorer.py  functional.py  intervals.py  metrics.py  model.py  pipeline.py  progress.py  results.py  runner.py  tune.py  utils.py
tests/: test_analysis.py  test_benchmark.py  test_core.py  test_data.py  test_evaluation.py  test_functional.py  test_metrics.py  test_pipeline.py  test_something.py  test_tasks.py
tutorials/: CSV_Analysis_Example.ipynb  Convert_NASA_Data_to_Orion_Format.ipynb  Convert_UCR_Data_to_Orion_Format.ipynb  Evaluating_an_Orion_Pipeline.ipynb  Multivariate_Input.ipynb  OrionDBExplorer.ipynb  Orion_on_Custom_Data.ipynb  Orion_with_Multivariate_Input.ipynb  README.md
user_guides/: benchmarking.html  data.html  evaluation_doc.html  index.html
(+600 files in other folders)
