[metadata]
name = orion-ml
version = attr: orion.__version__
url = https://github.com/sintel-dev/Orion
download_url = https://pypi.org/project/orion-ml/
project_urls =
    Documentation = https://sintel.dev/Orion/
    Source Code = https://github.com/sintel-dev/Orion
    Changes = https://sintel.dev/Orion/history.html
    Issue Tracker = https://github.com/sintel-dev/Orion/issues
    Twitter = https://twitter.com/lab_dai
author = MIT Data To AI Lab
author_email = dailabmit@gmail.com
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
license = MIT license
description = Orion is a machine learning library built for unsupervised time series anomaly detection
long_description = file: README.md, HISTORY.md
long_description_content_type = text/markdown
keywords = orion, time series, anomaly, detection
platforms = any
test_suite = tests

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    s3fs >= 0.2.2, <0.5
    mlblocks >= 0.3.3, <0.4
    mlprimitives >= 0.2.2, <0.3
    numpy >= 1.16, <1.17
    pandas >= 0.23.4, <0.25
    scikit-learn >= 0.20.1, <0.21
    tabulate >= 0.8.3, <0.9
    Keras >= 2.1.6, <2.4
    numba >= 0.48, <0.52
    pyts >= 0.9, <0.11
    azure-cognitiveservices-anomalydetector >= 0.3, <0.4
    xlsxwriter >= 1.3.6<1.4
    h5py<2.11.0, >= 2.10.0
python_requires = >= 3.6, <3.8

[options.extras_require]
test =
    pytest >= 3.4.2
    pytest-cov >= 2.6.0
    rundoc >= 0.4.3, <0.5
dev = 
    # general
    pip >= 9.0.1 
    bumpversion >= 0.5.3, <0.6 
    watchdog >= 0.8.3, <0.11 

    # docs
    m2r2 >= 0.2.5, <0.3 
    nbsphinx >= 0.5.0, <0.7 
    Sphinx >= 3, <3.3 
    pydata-sphinx-theme 
    autodocsumm >= 0.1.10, <1 
    ipython >= 6.5, <7.5 
    Jinja2<3.1 

    # style check
    flake8 >= 3.7.7, <4 
    isort >= 4.3.4, <5 

    # fix style issues
    autoflake >= 1.2, <2 
    autopep8 >= 1.4.3, <2 

    # distribute on PyPI
    twine >= 1.10.0, <4 
    wheel >= 0.30.0 

    # Advanced testing
    coverage >= 4.5.1, <6 
    tox >= 2.9.1, <4 
    invoke 

    %(test)s
 

[options.package_data]
* =
    AUTHORS.rst
    CONTRIBUTING.rst
    HISTORY.md
    LICENSE
    README.md
orion =
    *.json
tests =
    *.*
docs = 
    *.md 
    *.rst 
    conf.py 
    Makefile 
    make.bat 
    *.jpg 
    *.png 
    *.gif
    
[options.packages.find]
include = orion, orion.*

[options.exclude_package_data]
* =
    * __pycache__
    *.py[co]

[options.entry_points]
console_scripts =
    orion = orion.__main__:main
mlblocks = 
    primitives = orion:MLBLOCKS_PRIMITIVES
    pipelines = orion:MLBLOCKS_PIPELINES

[bumpversion]
current_version = 0.3.2.dev0
commit = True
tag = True
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)(?P<candidate>\d+))?
serialize = 
    {major}.{minor}.{patch}.{release}{candidate}
    {major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = release
first_value = dev
values = 
    dev
    release

[bumpversion:part:candidate]

[bumpversion:file:orion/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[flake8]
max-line-length = 99
exclude = .tox, .git, __pycache__, .ipynb_checkpoints